...
                app:expandedTitleGravity="top"
                app:expandedTitleMarginStart="16dp"

                app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_main"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />


            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_main" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:elevation="20dp"
            android:src="@drawable/shopping_cart" />
...
