<resources>
    <string name="app_name">Invasive Species</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="store_description">des</string>

    <!--plant names and descriptions-->
    <string name="wisteria_common_name">Chinese Wisteria</string>
    <string name="wisteria_latin_name">Wisteria sinensis</string>
    <string name="wisteria_description">des</string>

    <string name="japanese_knotweed_common_name">Japanese Knotweed</string>
    <string name="knotweed_latin_name">Reynoutria japonica</string>
    <string name="knotweed_description">des</string>

    <string name="english_ivy_common_name">English Ivy</string>
    <string name="english_ivy_latin_name">Hedera helix</string>
    <string name="english_ivy_description">des</string>

    <string name="ailanthus_common_name">Tree of Heaven</string>
    <string name="ailanthus_latin_name">Ailanthus altissima</string>
    <string name="ailanthus_description">des</string>
...
