<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview_main_activity"
        android:layout_width="220dp"
        android:layout_height="175dp"
        card_view:cardElevation="3dp"

        card_view:cardUseCompatPadding="true">


            <ImageView
                android:id="@+id/imageview_card_main"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:paddingTop="8dp"
                android:layout_gravity="center|top"
                android:src="@drawable/daylily" />

            <TextView
                android:id="@+id/textview_name_card_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="plant name"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="15sp" />


    </android.support.v7.widget.CardView>


</LinearLayout>