...
            android:scrollbars="vertical"/>


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_detail_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="50dp"
        android:src="@drawable/ic_add_shopping_cart_black_24dp" />
...
